[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/powerups/Ultimate.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="Ultimate" type="Area2D"]
collision_layer = 256
collision_mask = 144
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DamageTimer" type="Timer" parent="."]
autostart = true

[node name="HealParticles" type="CPUParticles2D" parent="."]
amount = 20
emission_shape = 1
emission_sphere_radius = 50.0
gravity = Vector2( 0, -50 )
color = Color( 0, 1, 0.345098, 1 )

[node name="HealTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="DamageParticles" type="CPUParticles2D" parent="."]
emission_shape = 1
emission_sphere_radius = 50.0
gravity = Vector2( 0, -60 )
color = Color( 1, 0, 0, 1 )

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 22.0
autostart = true
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_DecayTimer_timeout"]
